# marrow-package-template

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  setup.cfg  setup.py
.github/: FUNDING.yml  issue_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  request.md
test/: test_nop.py
